<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical" >

    <EditText
        android:id="@+id/t_profile_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email" />

    <EditText
        android:id="@+id/t_profile_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t_profile_et_email"
        android:layout_marginTop="10sp"
        android:inputType="textPassword"
        android:hint="@string/enter_password" />

    <EditText
        android:id="@+id/t_profile_et_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t_profile_et_password"
        android:layout_marginTop="10sp"
        android:inputType="textPersonName"
        android:hint="@string/enter_full_name" />

    <EditText
        android:id="@+id/t_profile_et_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t_profile_et_fullname"
        android:layout_marginTop="10sp"
        android:inputType="date"
        android:focusable="false"
        android:hint="@string/enter_birthday" />

    <EditText
        android:id="@+id/t_profile_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t_profile_et_birthday"
        android:layout_marginTop="10sp"
        android:inputType="phone"
        android:hint="@string/enter_phone_number" />

    <Spinner
        android:id="@+id/t_profile_sp_usertype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t_profile_et_phone"
        android:layout_marginTop="10sp"
        android:entries="@array/profile_user_type" />

    <RadioGroup
        android:id="@+id/t_profile_rd_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t_profile_sp_usertype"
        android:orientation="horizontal"
        android:layout_marginTop="10sp" >

        <TextView
            android:id="@+id/t_profile_rd_sex_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:text="@string/enter_gender" />

        <RadioButton
            android:id="@+id/t_profile_rd_sex_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/t_profile_rd_sex_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="@string/female" />

    </RadioGroup>

</RelativeLayout>
