<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10sp"
    android:gravity="center_vertical" >

    <EditText
        android:id="@+id/addplan_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_plan_name" />

    <EditText
        android:id="@+id/addplan_et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addplan_et_name"
        android:layout_marginTop="10sp"
        android:inputType="date"
        android:focusable="false"
        android:hint="@string/enter_plan_date" />

    <EditText
        android:id="@+id/addplan_et_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addplan_et_date"
        android:layout_marginTop="10sp"
        android:inputType="time"
        android:focusable="false"
        android:hint="@string/enter_plan_time" />

    <EditText
        android:id="@+id/addplan_et_note"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_below="@id/addplan_et_time"
        android:layout_marginTop="10sp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:hint="@string/enter_plan_note" />

</RelativeLayout>
