<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.LoginActivity" >

    <RelativeLayout
        android:id="@+id/login_container_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="30sp" >

        <LinearLayout
            android:id="@+id/login_container_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <ImageView
                android:id="@+id/login_iv_logo"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:tint="@color/gold"
                android:src="@drawable/g_symbol" />

        </LinearLayout>

        <TextView
            android:id="@+id/login_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_container_logo"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="50sp"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:gravity="center" />

        <EditText
            android:id="@+id/login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_tv_title"
            android:layout_marginTop="10sp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_et_email"
            android:layout_marginTop="10sp"
            android:inputType="textPassword"
            android:hint="@string/enter_password" />

        <LinearLayout
            android:id="@+id/login_container_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_et_password"
            android:layout_marginTop="50sp"
            android:gravity="center" >

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_gravity="center"
                android:text="@string/login" />

            <Button
                android:id="@+id/login_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_gravity="center"
                android:text="@string/register" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
