<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.RegisterActivity" >

    <RelativeLayout
        android:id="@+id/register_container_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="30sp"
        tools:context=".activity.RegisterActivity" >

        <TextView
            android:id="@+id/register_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:paddingBottom="50sp"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:gravity="center" />

        <include
            layout="@layout/template_profile"
            android:id="@+id/register_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_tv_title"
            android:layout_marginTop="10sp" />

        <CheckBox
            android:id="@+id/register_cb_tnc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_profile"
            android:layout_marginTop="10sp"
            android:text="@string/tnc" />

        <LinearLayout
            android:id="@+id/register_container_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_cb_tnc"
            android:layout_marginTop="50sp"
            android:gravity="center" >

            <Button
                android:id="@+id/register_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_gravity="center"
                android:text="@string/login" />

            <Button
                android:id="@+id/register_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_gravity="center"
                android:text="@string/register" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
